# bit-board

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md
.github/workflows/: release-plz.yml  test.yaml
examples/: bit_viewing.rs
src/: bitboard.rs  bitboarddyn.rs  bitboardstatic.rs  lib.rs
