[package]
name = "bit-board"
version = "0.4.1"
edition = "2024"
description = "A lightweight wrapper over bitvec for 2D bit array operations"
license = "MIT"
readme = "README.md"
repository = "https://github.com/natemcintosh/bit-board"

[dependencies]
bitvec = "1"

[dev-dependencies]
rstest = "0.26.1"
